[package]
name = "mio-rs"
version = "0.1.0"
authors = ["Moka"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
kankyo = "0.2"
chrono = "0.4.11"

[dependencies.serenity]
version = "0.8"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["blocking", "json"]