[package]
name = "mio-rs"
version = "0.1.0"
authors = ["Moka"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
kankyo = "0.2"
chrono = "0.4.11"
lazy_static = "1.4.0"
rustc_version_runtime = "0.1.*"
sysinfo = "0.14.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-aux = "2.1.1"
regex = "1"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.serenity]
version = "0.9.3"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json"]